// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package pb;

// 生成 golang 代码后的包名
option go_package = "./order_pb";

// 定义请求体
message GetOrderInfoReq {
  int64 id = 1;
}
// 定义响应体
message GetOrderInfoResp {
  int64 id = 1;
  string name = 2;
}

// 定义 OrderInfo 服务
service OrderInfo {
  // 定义一个 OrderInfo 一元 rpc 方法，请求体和响应体必填。
  rpc GetOrderInfo(GetOrderInfoReq) returns (GetOrderInfoResp);
}